@@ -34,5 +34,6 @@
     <input type="submit" src="/foo.jpg" />
     <input type="submit" src="http://site.com/foo.jpg" />
     <a href="foo.html">Link</a>
+    <a href="#foo">Anchor</a>
   </body>
 </html>
